--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link
+      rel="shortcut icon"
+      href="./src/assets/logo.png"
+      type="image/x-icon"
+    />
+    <title>Movieium - Book Your Movie Ticket Online</title>
   </head>
   <body>
     <div id="root"></div>
